email-forms/main/default/objects/Email_Form__c/Email_Form__c.object-meta.xml
<CustomObject>

    <label>Email Form</label>
    <nameField>
        <label>Email Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>