email-forms/main/default/objects/Email_Form__c/fields/Form_HTML__c.field-meta.xml
<CustomField>
    <fullName>Form_HTML__c</fullName>
    <label>Form HTML</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>