email-forms/main/default/objects/Email_Form__c/fields/Form_JSON__c.field-meta.xml
<CustomField>
    <fullName>Form_JSON__c</fullName>
    <label>Form JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>