email-forms/main/default/objects/Email_Form__c/fields/Outro_Text__c.field-meta.xml
<CustomField>
    <fullName>Outro_Text__c</fullName>
    <label>Outro Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>