email-forms/main/default/objects/Email_Form__c/fields/Recipient_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name_Field__c</fullName>
    <label>Recipient Name Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>