email-forms/main/default/objects/Email_Form__c/fields/Success_Message__c.field-meta.xml
<CustomField>
    <fullName>Success_Message__c</fullName>
    <label>Success Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>