email-forms/main/default/objects/Email_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email_Template_Metadata_Id__c</columns>
    <columns>Form_HTML__c</columns>
    <columns>Form_JSON__c</columns>
    <columns>Intro_Text__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Outro_Text__c</columns>
    <columns>Recipient_Email_Field__c</columns>
    <columns>Recipient_Name_Field__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>